package(default_visibility = ["//visibility:public"])

filegroup(
    name = "node_modules",
    srcs = glob(
        ["/".join([
            "node_modules",
            pkg,
            "**",
            ext,
        ]) for pkg in [
            "@angular",
            "@types",
            "bytebuffer",
            "jasmine",
            "minimist",
            "protobufjs",
            "protractor",
            "reflect-metadata",
            "rxjs",
            "tsickle",
            "tslib",
            "tsutils",
            "typescript",
            "zone.js",
            "hapi",
            "express",
        ] for ext in [
            "*.js",
            "*.json",
            "*.d.ts",
        ]] + [
            "node_modules/http-server/**",
        ],
        exclude = [
            "node_modules/**/test/**",
            "node_modules/**/docs/**",
        ],
    ),
)
