# Marker file indicating this folder is a Bazel package.
# Needed so that tsconfig.json can be referenced from BUILD rules.
package(default_visibility = ["//visibility:public"])

exports_files(["tsconfig.json"])

load("@build_bazel_rules_nodejs//:defs.bzl", "node_modules_filegroup")

alias(
    name = "install",
    actual = "@yarn//:yarn",
)

filegroup(
    name = "node_modules",
    srcs = glob(["/".join(["node_modules", pkg, "**", ext]) for pkg in [
        "bytebuffer",
        "protobufjs",
        "express",
        "hapi",
        "jasmine",
        "reflect-metadata",
        "tsickle",
        "tslib",
        "tslint",
        "tsutils",
        "typescript",
        "zone.js",
        "@types",
        "@schematics",
        "@angular-devkit",
    ] for ext in [
        "*.js",
        "*.json",
        "*.d.ts",
    ]]
    ) + ["@build_bazel_rules_typescript//:node_modules"],
    # "@build_bazel_rules_typescript//:node_modules" is incluced
    # in `//:node_modules` so that npm dependencies that are hoisted to
    # node_modules/@bazel/typescript/node_modules because of conflicting
    # versions can be resolved correctly
)
