package(default_visibility = ["//visibility:public"])
load("@build_bazel_rules_nodejs//:defs.bzl", "jasmine_node_test")
load("@angular//:index.bzl", "ng_module", "ng_package")
load("@build_bazel_rules_typescript//:defs.bzl", "ts_library")
load("//modules/aspnetcore-engine:rollup_globals.bzl", "ASPNET_ROLLUP_GLOBALS")

ng_module(
    name = "aspnetcore-engine",
    srcs = glob(["**/*.ts"], exclude=["spec/**/*.spec.ts"]),
    module_name = "@nguniversal/aspnetcore-engine",
    tsconfig = "//modules:tsconfig.lib.json",
    deps = [
        "@rxjs",
        "//modules/aspnetcore-engine/tokens",
    ],
)

ng_package(
    name = "npm_package",
    srcs = ["package.json"],
    entry_point = "modules/aspnetcore-engine/public_api.js",
    globals = ASPNET_ROLLUP_GLOBALS,
    deps = [
        ":aspnetcore-engine",
        "//modules/aspnetcore-engine/tokens",
    ],
)

ts_library(
    name = "unit_test_lib",
    testonly = True,
    srcs = glob([
        "spec/**/*.spec.ts",
    ]),
    deps = [
        ":aspnetcore-engine",
    ],
)

jasmine_node_test(
    name = "unit_test",
    deps = [":unit_test_lib"],
    timeout="short",
)
