package(default_visibility = ["//visibility:public"])

load("//tools:defaults.bzl", "ng_module", "ng_package", "ts_library")
load("@build_bazel_rules_nodejs//:defs.bzl", "jasmine_node_test")

ng_module(
    name = "aspnetcore-engine",
    srcs = glob([
        "*.ts",
        "src/**/*.ts",
    ]),
    module_name = "@nguniversal/aspnetcore-engine",
    deps = [
        "//modules/aspnetcore-engine/tokens",
        "@angular//packages/common",
        "@angular//packages/platform-browser",
        "@angular//packages/platform-server",
        "@rxjs",
    ],
)

ng_package(
    name = "npm_package",
    srcs = [
        ":package.json",
    ],
    entry_point = "modules/aspnetcore-engine/index.js",
    readme_md = ":README.md",
    deps = [
        ":aspnetcore-engine",
        "//modules/aspnetcore-engine/tokens",
    ],
)

ts_library(
    name = "unit_test_lib",
    testonly = True,
    srcs = glob([
        "spec/**/*.spec.ts",
    ]),
    deps = [
        ":aspnetcore-engine",
    ],
)

jasmine_node_test(
    name = "unit_test",
    srcs = [":unit_test_lib"],
)
