load("//tools:defaults.bzl", "npm_package", "ts_library")

exports_files(["builders.json", "package.json"])

ts_library(
  name = "ssr",
  srcs = glob(["**/*.ts"]),
  deps = [
    "@rxjs",
    "@rxjs//operators",
    "@ngudeps//@angular-devkit/architect",
  ]
)

npm_package(
  name = "package",
  srcs = [
    "//modules/builders:builders.json",
    "//modules/builders:package.json",
    "//modules/builders/src/ssr:schema.json",
  ],
  deps = [
    ":ssr",
  ]
)
