load("//tools:defaults.bzl", "npm_package", "ts_library")

exports_files(["package.json", "builders.json"])

npm_package(
  name = "package",
  srcs = [
    "//modules/builders:package.json",
    "//modules/builders:builders.json",
    "//modules/builders/src/ssr:schema.json",
  ],
  deps = [
    "//modules/builders/src/ssr:ssr",
  ]
)
