package(default_visibility = ["//visibility:public"])

load("//tools:defaults.bzl", "ng_module", "ng_package", "ts_library")
load("@build_bazel_rules_nodejs//:defs.bzl", "jasmine_node_test")

ng_module(
    name = "common",
    srcs = glob([
        "*.ts",
        "src/**/*.ts",
    ]),
    module_name = "@nguniversal/common",
    deps = [
        "@angular//packages/common",
        "@angular//packages/common/http",
        "@angular//packages/core",
        "@angular//packages/platform-browser",
        "//modules/common/engine",
        "//modules/common/tokens",
    ],
)

ng_package(
    name = "npm_package",
    srcs = [":package.json"],
    entry_point = "modules/common/index.js",
    readme_md = ":README.md",
    deps = [
        ":common",
        "//modules/common/engine",
        "//modules/common/tokens",
    ],
)

ts_library(
    name = "unit_test_lib",
    testonly = True,
    srcs = glob([
        "spec/**/*.spec.ts",
    ]),
    deps = [
        ":common",
        "@rxjs",
        "@angular//packages/common/http",
    ],
)

jasmine_node_test(
    name = "unit_test",
    srcs = [":unit_test_lib"],
)
