load("//tools:defaults.bzl", "PACKAGE_JSON_REPLACEMENTS", "jasmine_node_test", "ng_module", "ng_package", "ng_test_library")
load("@aspect_rules_js//js/private:expand_template.bzl", "expand_template")
load("@aspect_rules_js//npm:defs.bzl", "npm_package")
load("@aspect_bazel_lib//lib:write_source_files.bzl", "write_source_files")

package(default_visibility = ["//visibility:public"])

npm_package(
    name = "common",
    srcs = [":npm_package"],
    replace_prefixes = {
        "npm_package": ""
    },
    visibility = ["//visibility:public"]
)

ng_module(
    name = "ng_module",
    package_name = "@nguniversal/common",
    srcs = glob([
        "*.ts",
        "src/**/*.ts",
    ]),
    deps = [
        "//modules/common/engine",
        "@npm//@angular/common",
        "@npm//@angular/core",
        "@npm//@angular/platform-browser",
        "@npm//rxjs",
    ],
)

expand_template(
    name = "package_json",
    out = "package.json.out",
    stamp = 1,
    stamp_substitutions = {
        "0.0.0-PLACEHOLDER": "{{BUILD_SCM_VERSION}}",
    },
    substitutions = PACKAGE_JSON_REPLACEMENTS,
    template = "package.json.tmpl",
)

write_source_files(
    name = "write_package_json",
    files = {
        "package.json": ":package_json",
    },
)

ng_package(
    name = "npm_package",
    package_name = "@nguniversal/common",
    srcs = [":package.json"],
    nested_packages = [
        "//modules/common/schematics:npm_package",
    ],
    readme_md = ":README.md",
    tags = ["release"],
    deps = [
        ":ng_module",
        "//modules/common/clover",
        "//modules/common/clover/server",
        "//modules/common/engine",
        "//modules/common/tools",
    ],
)

ng_test_library(
    name = "unit_test_lib",
    srcs = glob([
        "spec/**/*.spec.ts",
    ]),
    entry_point = ":spec/transfer_http.spec.ts",
    deps = [
        ":ng_module",
        "@npm//@angular/common",
        "@npm//@angular/compiler",
        "@npm//rxjs",
    ],
)

jasmine_node_test(
    name = "unit_test",
    srcs = [
        ":unit_test_lib",
    ],
)
