package(default_visibility = ["//visibility:public"])
load("@build_bazel_rules_nodejs//:defs.bzl", "jasmine_node_test")
load("@angular//:index.bzl", "ng_module", "ng_package")
load("@build_bazel_rules_typescript//:defs.bzl", "ts_library")
load("//modules/express-engine:rollup_globals.bzl", "EXPRESS_ROLLUP_GLOBALS")

ng_module(
    name = "express-engine",
    srcs = glob(["**/*.ts"], exclude=["spec/**/*.spec.ts"]),
    module_name = "@nguniversal/express-engine",
    tsconfig = "//modules:tsconfig.lib.json",
    deps = [
        "//modules/express-engine/tokens",
    ],
)

ng_package(
    name = "npm_package",
    srcs = ["package.json"],
    entry_point = "modules/express-engine/public_api.js",
    globals = EXPRESS_ROLLUP_GLOBALS,
    deps = [
        ":express-engine",
        "//modules/express-engine/tokens",
    ],
)

ts_library(
    name = "unit_test_lib",
    testonly = True,
    srcs = glob([
        "spec/**/*.spec.ts",
    ]),
    deps = [
        ":express-engine",
    ],
)

jasmine_node_test(
    name = "unit_test",
    deps = [":unit_test_lib"],
    timeout="short",
)
