package(default_visibility = ["//visibility:public"])

load("//tools:defaults.bzl", "ng_module", "ng_package", "ts_library")
load("@build_bazel_rules_nodejs//:defs.bzl", "jasmine_node_test")

ng_module(
    name = "express-engine",
    srcs = glob([
        "*.ts",
        "src/**/*.ts",
    ]),
    module_name = "@nguniversal/express-engine",
    deps = [
        "//modules/express-engine/tokens",
        "@angular//packages/platform-server",
    ],
)

ng_package(
    name = "npm_package",
    srcs = [
        ":package.json",
    ],
    entry_point = "modules/express-engine/index.js",
    readme_md = ":README.md",
    deps = [
        ":express-engine",
        "//modules/express-engine/tokens",
    ],
)

ts_library(
    name = "unit_test_lib",
    testonly = True,
    srcs = glob([
        "spec/**/*.spec.ts",
    ]),
    deps = [
        ":express-engine",
        "//modules/express-engine/tokens",
        "@angular//packages/compiler",
        "@angular//packages/core",
        "@angular//packages/platform-browser",
        "@angular//packages/platform-server",
    ],
)

jasmine_node_test(
    name = "unit_test",
    srcs = [":unit_test_lib"],
)
