load("//tools:defaults.bzl", "jasmine_node_test", "ng_module", "ng_package", "ng_test_library")

package(default_visibility = ["//visibility:public"])

#load("@build_bazel_rules_typescript//:defs.bzl", "ts_proto_library")

#proto_library(
#    name = "engine_proto",
#    srcs = ["grpc-engine.proto"],
#)
#
#ts_proto_library(
#    name = "engine_ts_proto",
#    deps = [":engine_proto"],
#)

filegroup(
    name = "temp_proto",
    srcs = ["src/grpc-engine.proto"],
)

ng_module(
    name = "grpc-engine",
    srcs = glob([
        "*.ts",
        "src/**/*.ts",
    ]),
    module_name = "@nguniversal/grpc-engine",
    deps = [
        "//modules/common/engine",
        "@ngudeps//grpc",
        # ":engine_ts_proto"
    ],
)

ng_package(
    name = "npm_package",
    srcs = [
        ":grpc-engine.proto",
        ":package.json",
    ],
    entry_point = "modules/grpc-engine/index.js",
    readme_md = ":README.md",
    tags = ["release"],
    deps = [
        ":grpc-engine",
        "@ngudeps//grpc",
    ],
)

ng_test_library(
    name = "unit_test_lib",
    srcs = glob([
        "spec/**/*.spec.ts",
    ]),
    deps = [
        ":grpc-engine",
        "@angular//packages/platform-browser",
        "@angular//packages/platform-server",
        "@ngudeps//domino",
        "@ngudeps//grpc",
        "@ngudeps//xhr2",
        "@ngudeps//zone.js",
    ],
)

jasmine_node_test(
    name = "unit_test",
    srcs = [
        ":grpc-engine.proto",
        ":unit_test_lib",
    ],
)
