load("//tools:defaults.bzl", "jasmine_node_test", "ts_library", "ng_package", "ng_test_library")

package(default_visibility = ["//visibility:public"])

ts_library(
    name = "grpc-engine",
    srcs = glob([
        "*.ts",
    ]),
    module_name = "@nguniversal/grpc-engine",
    deps = [
        "//modules/grpc-engine/src:src",
    ],
)

ng_package(
    name = "npm_package",
    srcs = [
        # ":grpc-engine.proto",
        ":package.json",
    ],
    entry_point = "modules/grpc-engine/index.js",
    readme_md = ":README.md",
    tags = ["release"],
    deps = [
        ":grpc-engine",
        "@ngudeps//grpc",
    ],
)

ts_library(
    name = "unit_test_lib",
    srcs = glob([
        "spec/**/*.spec.ts",
    ]),
    testonly = 1,
    deps = [
        ":grpc-engine",
        "@angular//packages/platform-browser",
        "@angular//packages/platform-server",
        "@angular//packages/core",
        "@angular//packages/core/testing",
        "@ngudeps//domino",
        "@ngudeps//grpc",
        "@ngudeps//xhr2",
        "@ngudeps//zone.js",
        "@ngudeps//@grpc/proto-loader",
        "@ngudeps//@types/jasmine",
    ],
)

jasmine_node_test(
    name = "unit_test",
    data = ["grpc-engine.proto"],
    srcs = [
        ":unit_test_lib",
    ],
)
