package(default_visibility = ["//visibility:public"])

load("@build_bazel_rules_nodejs//:defs.bzl", "jasmine_node_test")
load("@angular//:index.bzl", "ng_module", "ng_package")
load("@build_bazel_rules_typescript//:defs.bzl", "ts_library")
load("//modules/hapi-engine:rollup_globals.bzl", "HAPI_ROLLUP_GLOBALS")

ng_module(
    name = "hapi-engine",
    srcs = glob([
        "*.ts",
        "src/**/*.ts",
    ]),
    module_name = "@nguniversal/hapi-engine",
    tsconfig = "//modules:tsconfig.lib.json",
    deps = [
        "//modules/hapi-engine/tokens",
    ],
)

ng_package(
    name = "npm_package",
    srcs = ["package.json"],
    entry_point = "modules/hapi-engine/public_api.js",
    globals = HAPI_ROLLUP_GLOBALS,
    deps = [
        ":hapi-engine",
        "//modules/hapi-engine/tokens",
    ],
)

ts_library(
    name = "unit_test_lib",
    testonly = True,
    srcs = glob([
        "spec/**/*.spec.ts",
    ]),
    deps = [
        ":hapi-engine",
    ],
)

jasmine_node_test(
    name = "unit_test",
    timeout = "short",
    deps = [":unit_test_lib"],
)
