package(default_visibility = ["//visibility:public"])

load("//tools:defaults.bzl", "ng_module", "ng_package", "ts_library")
load("@build_bazel_rules_nodejs//:defs.bzl", "jasmine_node_test")

ng_module(
    name = "hapi-engine",
    srcs = glob([
        "*.ts",
        "src/**/*.ts",
    ]),
    module_name = "@nguniversal/hapi-engine",
    deps = [
        "//modules/hapi-engine/tokens",
        "@angular//packages/platform-server",
    ],
)

ng_package(
    name = "npm_package",
    srcs = [
        ":package.json",
    ],
    entry_point = "modules/hapi-engine/index.js",
    readme_md = ":README.md",
    deps = [
        ":hapi-engine",
        "//modules/hapi-engine/tokens",
    ],
)

ts_library(
    name = "unit_test_lib",
    testonly = True,
    srcs = glob([
        "spec/**/*.spec.ts",
    ]),
    deps = [
        ":hapi-engine",
        "@angular//packages/core",
        "@angular//packages/platform-browser",
        "@angular//packages/platform-server",
    ],
)

jasmine_node_test(
    name = "unit_test",
    srcs = [":unit_test_lib"],
)
