load("//tools:defaults.bzl", "ts_library", "ng_module", "ng_package")
load("@build_bazel_rules_nodejs//:defs.bzl", "jasmine_node_test")
package(default_visibility = ["//modules:__subpackages__"])
ng_module(
    name = "module-map-ngfactory-loader_module",
    srcs = glob([
        "*.ts",
        "src/**/*.ts",
    ]),
    # module_name = "@nguniversal/module-map-ngfactory-loader",
    deps = [],
)

ng_package(
    name = "@nguniversal/module-map-ngfactory-loader",
    srcs = [":package.json"],
    entry_point = "index.js",
    deps = [":module-map-ngfactory-loader_module"],
)

ts_library(
    name = "unit_test_lib",
    srcs = glob([
      "spec/**/*.spec.ts"
    ]),
    testonly=True,
    deps = [
      ":module-map-ngfactory-loader_module"
    ],
)

jasmine_node_test(
    name = "unit_test",
    srcs = [":unit_test_lib"],
)
