package(default_visibility = ["//visibility:public"])

load("//tools:defaults.bzl", "ng_module", "ng_package", "ts_library")

exports_files(["package.json"])

ng_module(
    name = "tokens",
    srcs = glob([
        "*.ts",
    ]),
    module_name = "@nguniversal/express-engine/tokens",
    deps = ["@angular//packages/core"],
)
