load("@build_bazel_rules_nodejs//:defs.bzl", "jasmine_node_test")
load("//tools:defaults.bzl", "npm_package", "ts_library")

package(default_visibility = ["//visibility:public"])

filegroup(
    name = "schematics_assets",
    srcs = glob([
        "**/files/**/*",
        "**/*.json",
    ]) + [
        "README.md",
    ],
)

ts_library(
    name = "schematics",
    srcs = glob(
        ["**/*.ts"],
        exclude = [
            "**/*.spec.ts",
            "**/files/**/*",
            "testing/**/*",
        ],
    ),
    module_name = "@nguniversal/hapi-engine/schematics",
    tsconfig = ":tsconfig.json",
)

# This package is intended to be combined into the main @nguniversal/hapi-engine package as a dep.
npm_package(
    name = "npm_package",
    srcs = [":schematics_assets"],
    deps = [":schematics"],
)

### Testing rules

jasmine_node_test(
    name = "unit_tests",
    srcs = [":schematics_test_sources"],
    data = [":schematics_assets"],
)

ts_library(
    name = "schematics_test_sources",
    testonly = True,
    srcs = glob(
        [
            "**/*.spec.ts",
            "testing/**/*.ts",
        ],
        exclude = ["**/files/**/*"],
    ),
    tsconfig = ":tsconfig.json",
    deps = [":schematics"],
)
